[package]
name = "firefly_compiler"
version = "0.1.0"
authors = ["Paul Schoenfelder <paulschoenfelder@gmail.com>"]
license = "Apache-2.0"
edition = "2021"
publish = false

[dependencies]
lazy_static = "1.4"
rand = "0.7"
log = "0.4"
anyhow = "1.0"
thiserror = "1.0"
clap = "2.34"
walkdir = "2.2"
salsa = "0.14"
salsa-macros = "0.14"
num_cpus = "1.0"
crossbeam = "0.7"
futures = "0.3.21"
async-task = "1.3"
parking_lot = "0.11.1"

firefly_diagnostics = { path = "../diagnostics" }
firefly_session = { path = "../session" }
firefly_target = { path = "../target" }
firefly_codegen = { path = "../codegen" }
firefly_util = { path = "../util" }
firefly_intern = { path = "../intern" }
firefly_llvm = { path = "../llvm" }
firefly_mlir = { path = "../mlir" }
firefly_pass = { path = "../pass" }
firefly_parser = { path = "../parser" }
firefly_beam = { path = "../../library/beam" }
firefly_syntax_base = { path = "../syntax_base" }
firefly_syntax_pp = { path = "../syntax_pp" }
firefly_syntax_erl = { path = "../syntax_erl" }
firefly_syntax_core = { path = "../syntax_core" }
firefly_syntax_ssa = { path = "../syntax_ssa" }
firefly_syntax_kernel = { path = "../syntax_kernel" }

[build-dependencies]
which = "4.0"
