[package]
name = "firefly_compiler"
description = "The driver for the Firefly compiler"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true
publish.workspace = true

[features]
default = []
native-compilation = ["dep:firefly_mlir"]

[dependencies]
anyhow = { workspace = true, features = ["std"] }
clap.workspace = true
firefly_arena = { path = "../../library/arena" }
firefly_beam = { path = "../../library/beam" }
firefly_binary = { path = "../../library/binary" }
firefly_bytecode = { path = "../../library/bytecode", features = ["std"] }
firefly_diagnostics = { path = "../diagnostics" }
firefly_intern = { path = "../intern" }
firefly_linker = { path = "../linker" }
firefly_llvm = { path = "../llvm" }
firefly_mlir = { path = "../mlir", optional = true }
firefly_number = { path = "../../library/number" }
firefly_pass = { path = "../pass" }
firefly_parser = { path = "../parser" }
firefly_session = { path = "../session" }
firefly_syntax_base = { path = "../syntax_base" }
firefly_syntax_pp = { path = "../syntax_pp" }
firefly_syntax_erl = { path = "../syntax_erl" }
firefly_syntax_core = { path = "../syntax_core" }
firefly_syntax_ssa = { path = "../syntax_ssa" }
firefly_syntax_kernel = { path = "../syntax_kernel" }
firefly_target = { path = "../target" }
firefly_util = { path = "../util" }
lazy_static.workspace = true
log.workspace = true
num_cpus = "1.0"
parking_lot.workspace = true
rayon = "1.6"
rustc-hash.workspace = true
smallvec.workspace = true
thiserror.workspace = true
walkdir = "2.2"

[build-dependencies]
which.workspace = true
