[package]
name = "liblumen_intern"
version = "0.1.0"
authors = ["Paul Schoenfelder <paulschoenfelder@gmail.com>", "Hans Elias B. Josephsen <me@hansihe.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
liblumen_diagnostics = { path = "../diagnostics" }

rustc-hash = "1.1"
lazy_static = "1.4"
