[package]
name = "firefly_intern"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true
publish.workspace = true

[features]
default = []
std = ["smallstr/std"]

[dependencies]
firefly_diagnostics = { path = "../diagnostics" }
firefly_diagnostics_macros = { path = "../diagnostics_macros" }
firefly_system = { path = "../../library/system" }
smallstr.workspace = true
smallvec.workspace = true

[build-dependencies]
toml.workspace = true
Inflector.workspace = true
