[package]
name = "firefly_llvm"
version = "0.1.0"
authors = ["Paul Schoenfelder <paulschoenfelder@fastmail.com>"]
edition = "2021"

build = "build.rs"
links = "firefly_llvm_core"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
firefly_intern = { path = "../intern" }
firefly_session = { path = "../session" }
firefly_target = { path = "../target" }
firefly_util = { path = "../util" }
firefly_compiler_macros = { path = "../macros" }
firefly_pass = { path = "../pass" }
firefly_profiling = { path = "../profiling" }
anyhow = "1.0"
bitflags = "1.3"
fxhash = "0.2"
paste = "1.0"
thiserror = "1.0"

[build-dependencies]
cc = "1.0"
which = "4.0"
