[package]
name = "firefly_llvm"
description = "Provides bindings to LLVM for use by the Firefly compiler"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true
publish.workspace = true

build = "build.rs"
links = "firefly_llvm_core"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true, features = ["std"] }
bitflags.workspace = true
firefly_intern = { path = "../intern" }
firefly_session = { path = "../session" }
firefly_target = { path = "../target" }
firefly_util = { path = "../util" }
firefly_compiler_macros = { path = "../macros" }
firefly_pass = { path = "../pass" }
firefly_profiling = { path = "../profiling" }
fxhash.workspace = true
paste.workspace = true
thiserror.workspace = true
#zstd = "0.12"

[build-dependencies]
cc = "1.0"
which.workspace = true
