[package]
name = "firefly_compiler_macros"
version = "0.1.0"
authors = ["Firefly Developers"]
edition = "2021"
publish = false

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
Inflector = "0.11"
proc-macro2 = "1.0"
quote = "1.0"

[dependencies.syn]
version = "1.0"
features = ["full", "printing", "extra-traits", "parsing"]
