[package]
name = "liblumen_mlir"
version = "0.1.0"
authors = ["Paul Schoenfelder <paulschoenfelder@fastmail.com>"]
edition = "2021"

build = "build.rs"
links = "mlir"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
liblumen_binary = { path = "../binary" }
liblumen_intern = { path = "../intern" }
liblumen_llvm = { path = "../llvm" }
liblumen_session = { path = "../session" }
liblumen_target = { path = "../target" }
liblumen_util = { path = "../util" }
liblumen_pass = { path = "../pass" }
liblumen_diagnostics = { path = "../diagnostics" }
liblumen_compiler_macros = { path = "../macros" }
paste = "1.0"
rand = "0.8"

[build-dependencies]
anyhow = "1.0"
cmake = "0.1"
which = "4.0"
liblumen_llvm = { path = "../llvm" }
