[package]
name = "firefly_mlir"
version = "0.1.0"
authors = ["Paul Schoenfelder <paulschoenfelder@fastmail.com>"]
edition = "2021"

build = "build.rs"
links = "mlir"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
firefly_binary = { path = "../../library/binary" }
firefly_number = { path = "../../library/number" }
firefly_intern = { path = "../intern" }
firefly_llvm = { path = "../llvm" }
firefly_session = { path = "../session" }
firefly_target = { path = "../target" }
firefly_util = { path = "../util" }
firefly_pass = { path = "../pass" }
firefly_diagnostics = { path = "../diagnostics" }
firefly_compiler_macros = { path = "../macros" }
paste = "1.0"
rand = "0.8"

[build-dependencies]
anyhow = "1.0"
cmake = "0.1"
which = "4.0"
firefly_llvm = { path = "../llvm" }
